--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	<description>Homez Backend API</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.host.url>http://sonarqube.dynaco.co</sonar.host.url>
+		<sonar.login>sqp_cf8b5e2ca66654fc86da49f9eb9b08a234f9caab</sonar.login>
+		<sonar.projectKey>Homez</sonar.projectKey>
+		<sonar.projectName>Homez</sonar.projectName>
+		<sonar.projectVersion>1.0</sonar.projectVersion>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -63,6 +68,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.7.0.1746</version>
+
+				<configuration>
+                    <sonar.host.url>http://sonarqube.dynaco.co</sonar.host.url>
+                    <sonar.projectKey>Homez</sonar.projectKey>
+                    <sonar.projectName>Homez</sonar.projectName>
+                    <sonar.login>sqp_cf8b5e2ca66654fc86da49f9eb9b08a234f9caab</sonar.login> <!-- O utiliza sonar.token si prefieres -->
+                </configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
