--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=homezbackend
-spring.datasource.url=jdbc:mysql://190.146.2.119:4407/grupo_1_5
-spring.datasource.username=grupo_1_5
-spring.datasource.password=grupo_1_5
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:11560/railway
+spring.datasource.username=root
+spring.datasource.password=fiVTmDIGoLqdgqfEJAzLmESnTpZJyAkE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
